# kurs_cpp_lato_2019

./: .gitignore  .travis.yml  4-list-without-loops.cpp  4-list.cpp  CMakeLists.txt  README.md  main.cpp
.circleci/: config.yml
L01-programmers-tools/: Post_Work  Post_Work.md  README.md  main.cpp  tutor  vimtutor  vtutorFinish
L01-programmers-tools/Hello_Word/: MyHeader.hpp  main.cpp
L01-programmers-tools/hello/: main.cpp
L01-programmers-tools/hello_world/: Makefile  main.cpp
L01-programmers-tools/homework/: VIM_RM
L02-C++-introduction/: CMakeLists.txt  FloatProblem.hpp  HomeWork2.hpp  HomeWork_long_int.hpp  HomeWork_palindrom.hpp  HomeWork_palindrom_recursive.hpp  MyIOoperators.cpp  README.md  a.out  basic_stuff.txt  long_int.cpp  main  main.cpp  operators.cpp  palindrom.cpp  palindrom.hpp  palindrom_recursive.cpp  palindrom_recursive.hpp  slowa_kluczowe.txt  stringView.cpp  task4.cpp  task5.cpp  testPalindrom.cpp  testPalindrome.h  zad04.cpp  zad05.cpp  zad06.cpp  zad07.cpp
L02-C++-introduction/homework/: palindrom_recursive.cpp
L03-object-oriented-cpp/: README.md
L04-stl/: 04.cpp  06.cpp  09.cpp  12A-crypto-app.cpp  12A.cpp  12A_basic_version.cpp  12A_basic_version_with_stl.cpp  12A_stl.cpp  12AwithLoop.cpp  12B-random-map-without-loops.cpp  12B-random-map.cpp  12B.cpp  12B_stl.cpp  12BwithLoop.cpp  12a.cpp  12b.cpp  9-palindrom-mismatch.cpp  Atkins.cpp  Atkins.hpp  CMakeLists.txt  Exercise4.cpp  Exercise6.cpp  Exercise9.cpp  Exercise_6.cpp  HomeWork4.hpp  HomeWorkSTL.cpp  Homework_part_1.cpp  README.md  Zadanie4.cpp  Zadanie6.cpp  Zadanie9.cpp  base.txt  bowling.txt  decrypt.txt  e 12b.cpp  e 9.cpp  ex12a.cpp  ex12b.cpp  ex4.cpp  ex4vector.cpp  (+7 more)
L04-stl/Projekt/: Database.cpp  Database.hpp  Makefile  Student.cpp  Student.hpp  main.cpp
L04-stl/STL_exercises/: exercise12B.cpp  exercise4.cpp  exercise9.cpp
L04-stl/cheatsheets/: algorithm.cpp  algorithm.md
L04-stl/homework/: Zad01-03.cpp  exc12a.cpp  exc4.cpp  exc6.cpp  exc9.cpp  zad01.cpp  zad02.cpp  zad03.cpp  zad04.cpp  zad05.cpp  zad06.cpp  zad07.cpp  zad08.cpp  zad09.cpp  zad10.cpp  zad11.cpp  zad12A.cpp  zad12B_Loop.cpp  zad12B_v2.cpp  zad12B_without_Loop.cpp  zad12a.cpp  zad12b.cpp
L04-stl/zadania_domowe/: 12Bstl.cpp
L05-testing/: notes.txt
L07-modern-cpp/exercises/1-file-reader/: main.cpp
L07-modern-cpp/exercises/2-zip-file-reader/: main.cpp
L09-templates-patterns/: Behavioral patterns.pptx  README.md
L10-repetition/: README.md
L11-recruitment-in-it/: README.md
Zadania_STL/: 12B.cpp  12Bstl.cpp  zad4.cpp  zad6.cpp  zad9.cpp
cheatsheets/: L04_algorithm.md
project/: CMakeLists.txt
tests/: helloWord.cpp
